# spiderweb

./: .gitignore  404.html  LICENSE.txt  Makefile  README.md  asgi.md  conftest.py  example.md  example.py  example2.py  example_async.py  example_async_middleware.py  example_auth.py  example_class_based_view.py  example_middleware.py  example_profile.py  file_uploads.md  index.html  llms.txt  management.md  pyproject.toml  quickstart.md  readme.md  responses.md  retype.yml  robots.txt  routes.md  sitemap.xml  test.py
.github/workflows/: publish.yml  retype.yml  tests.yml  update_badges.yml
.junie/: guidelines.md
.junie/plans/: asgi.md
asgi/: index.html
db/: index.html
docs/: README.md  _coverpage.md  _sidebar.md  asgi.md  db.md  example.md  file_uploads.md  index.html  management.md  quickstart.md  responses.md  routes.md  static_files.md
docs/middleware/: cors.md  csrf.md  custom_middleware.md  gzip.md  index.md  overview.md  pydantic.md  sessions.md  test2.md
example/: index.html
file_uploads/: index.html
management/: index.html
middleware/: csrf.md  gzip.md  index.html  sessions.md
middleware/cors/: index.html
middleware/csrf/: index.html
middleware/custom_middleware/: index.html
middleware/gzip/: index.html
middleware/overview/: index.html
middleware/pydantic/: index.html
middleware/sessions/: index.html
quickstart/: index.html
resources/css/: retype.css
resources/js/: config.js  prism.js  search.json
responses/: index.html
routes/: index.html
spiderweb/: __init__.py  asgi.py  authentication.py  blueprint.py  cli.py  constants.py  converters.py  db.py  decorators.py  default_responses.py  default_views.py  example_validator.py  exceptions.py  files.py  jinja_core.py  jinja_extensions.py  local_server.py  main.py  middleware.py  request.py  response.py  routegroup.py  routes.py  secrets.py  server_checks.py  utils.py
spiderweb/middleware/: __init__.py  base.py  cors.py  csrf.py  gzip.py  pydantic.py  sessions.py
spiderweb/models/: __init__.py  permission.py  user.py
spiderweb/tests/: __init__.py  helpers.py  middleware.py  test.html  test_asgi.py  test_asgi_extra.py  test_authentication.py  test_blueprints.py  test_cli.py  test_cookies.py  test_coverage_extras.py  test_db.py  test_exceptions.py  test_files.py  test_jinja_extras.py  test_local_server.py  test_local_server_extra.py  test_main_extra.py  test_middleware.py  test_middleware_init.py  test_pydantic_middleware.py  test_responses.py  test_routegroups.py  test_routes.py  test_secrets.py  test_server.py  test_server_checks.py  test_session_persistence.py  test_user.py  test_utils.py  test_variable_urls.py  views_for_tests.py
spiderweb/tests/staticfiles/: style.css
static/: llms.txt
static_files/: index.html
templates/: base.html  file_upload.html  form.html  test.html
tools/: update_version.py
